--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <script src="script.js"></script>
   </head>
   <body>
+    <header>
+      <div class="Examlabs">
+        <img src="https://www.exam-labs.com/static/img/logo.svg" alt="">
+      </div>
+      <div class="home">
+        <p>Home > <span>Checkout</span></p>
+      </div>
+      <div class="Secure-product">
+        <h2>Secure One-Step Checkout</h2>
+        <h3>Your Product Will Become Available Immediately After Purchase</h3>
+      </div>
+    </header>
     <div class="banner">
       <div class="limit-clock">
         <img src="./Assests/clock.png" alt="" />
@@ -21,7 +33,6 @@
         <h2>Get 10% OFF</h2>
         <h2><span class="code">Use Code</span>EXAMSTART</h2>
       </div>
-     
     </div>
   </body>
 </html>
